# fx-bridge-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
bridge/: Cargo.toml
bridge/src/: lib.rs  oracle_loop.rs  send_to_fx.rs  singer_loop.rs
ethereum/: Cargo.toml
ethereum/src/: address.rs  chainlink.rs  client.rs  confirm_tx.rs  erc20.rs  fx_bridge.rs  gas_price.rs  lib.rs  private_key.rs
fxchain/: Cargo.toml
fxchain/src/: address.rs  builder.rs  grpc_client.rs  lib.rs  private_key.rs  proto_ext.rs  public_key.rs
fxchain/src/prost/: fx.gravity.v1.rs  fx.other.rs
fxeth/: Cargo.toml
fxeth/src/: main.rs
prometheus/: Cargo.toml
prometheus/src/: lib.rs  metrics.rs
proto-build/: Cargo.toml
proto-build/src/: main.rs
relayer/: Cargo.toml
relayer/src/: batch_relaying.rs  find_latest_valset.rs  lib.rs  relayer_loop.rs  valset.rs  valset_relaying.rs
