[package]
name = "bridge"
version = "0.1.0"
authors = ["zakir <zakir@pundix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum = { version = "0.1.0", path = "../ethereum" }
fxchain = { version = "0.1.0", path = "../fxchain" }
prometheus = { version = "0.1.0", path = "../prometheus" }
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "master" }
reqwest = { version = "0.11", features = ["json"] }
tokio = "1.5"
log = "0.4.14"
env_logger = "0.8.3"
tonic = "0.4.1"
prost-types = "0.7"
eyre = "0.6"
serde = "1.0"
async-recursion = "0.3.2"
serde_json = "1.0"
