[package]
name = "fxchain"
version = "0.1.0"
authors = ["zakir <nash@wokoworks.com>"]
edition = "2018"

[features]

[dependencies]
prometheus = { version = "0.1.0", path = "../prometheus" }
k256 = { version = "0.10.2", features = ["ecdsa-core", "sha256"] }
tendermint-rpc = { version = "0.23.3", features = ["http-client"] }
tendermint = { version = "0.23.3", default-features = false, features = ["secp256k1"] }
ecdsa = { version = "0.13.3", features = ["std"] }
tonic = { version = "0.6.2", features = ["tls", "tls-roots"] }
cosmos-sdk-proto = "0.9.0"
log = "0.4"
env_logger = "0.8.3"
tokio = "1.5.0"
eyre = "0.6"
prost = "0.9.0"
prost-types = "0.9.0"
rand_core = "0.6.3"
bech32 = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
num-bigint = "0.3"
sha2 = "0.9"
ripemd160 = "0.9"
secp256k1 = "0.21.2"
bip39 = "1.0.1"
hmac = "0.10"
url = "2.2.1"
hex = "0.4.3"
