[package]
name = "prometheus"
version = "0.1.0"
authors = ["zakir <nash@wokoworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["server"] }
prometheus = { version = "0.12.0", features = ["process"] }
lazy_static = "1"
log = "0.4.14"